# tcdm-adaptive

./: .gitignore  ALGORITHM.md  AMELIORATIONS.md  ANALYSE_DOUBLE_DQN_ET_PATTERNS.md  ANALYSE_OBJECTIFS_TCDRM_V1.md  ANALYSE_PROBLEME_DQN_PLAT.md  ARTICLE_COMPLIANCE_REPORT.md  CORRECTIONS_DQN_APPRENTISSAGE.md  CORRECTIONS_FINALES_TCDRM_V1.md  DOCUMENTATION_COMPLETE_TCDRM_v2.md  DQN_OPTIMIZATIONS.md  DQN_TCDRM_v2 (1).md  DQN_TCDRM_v2.md  FINAL_CLEANUP_REPORT.md  FINAL_RESULTS_50K.md  MODIFICATIONS_ALIGNEMENT_TCDRM_V1.md  MODIFICATIONS_ENTRAINEMENT.md  NETTOYAGE_FINAL.md  NOUVELLE_APPROCHE_RL.md  PARAMETRES_ARTICLE_TCDRM_V1.md  PATTERNS_CLOUD_IMPLEMENTES.md  PROBLEM_ANALYSIS.md  PROJECT_STRUCTURE.md  QUICK_START_INTEGRATION.md  Qlearning_TCDRM_v2 (1).md  Qlearning_TCDRM_v2.md  RAPPORT_CONFORMITE_ARTICLE.md  READ1.md  READ2.md  READ3.md  README.md  README_REAL_RL.md  README_TCDRM_ADAPTIVE.md  README_TENSORBOARD.md  README_WORKFLOW.md  README_WORKFLOW_SCRIPT.md  RESULTATS_CORRIGES.md  RESUME_COMPLET_CORRECTIONS_PYTHON_JAVA.md  SCRIPTS_GUIDE.md  Sujets_TCDRM_v2.docx  (+33 more)
python_rl/: .gitignore  PROJECT_SUMMARY.md  README.md  SCIENTIFIC_APPROACH.md  compare_with_java.py  connect_to_java.py  connect_to_java_for_graphs.py  connect_to_java_with_optimal_actions.py  evaluate_model.py  export_qtable_to_json.py  generate_3curves_graphs.py  generate_4curves_graphs.py  generate_graphs_unified.py  generate_optimal_actions.py  load_model_for_java.py  optimize_hyperparameters.py  pyproject.toml  run_experiments.sh  run_tensorboard.sh  test_java_connection.py  test_optimizations.py  test_py4j_simple.py  train.py  train_adaptive_policy.py  train_cloudsim.py  train_dqn_policy.py  train_general_policy.py  train_simple_qlearning.py
python_rl/agents/: __init__.py  dqn_agent.py  simple_qlearning_agent.py  simple_qlearning_wrapper.py  tabular_qlearning.py
python_rl/bridge/: __init__.py  adaptive_strategy.py  client.py  rl_bridge.py
python_rl/config/: __init__.py  constants.py
python_rl/configs/: qlearning_config.yaml
python_rl/envs/: __init__.py  cloudsim_env.py  reward_function_tsla.py  tcdrm_env.py  tcdrm_env_v2.py  tcdrm_qlearning_env.py
python_rl/results/dqn/: dqn_training_metrics.pkl
python_rl/results/optimal_actions/: optimal_actions_R1.pkl  optimal_actions_R2.pkl
python_rl/results/tcdrm_adaptive/: adaptive_model.pkl  training_metrics.pkl
python_rl/results/tcdrm_adaptive/full_run_20260127_084048/: adaptive_model.pkl  training_metrics.pkl
python_rl/results/tcdrm_adaptive/run_20260127_084556/: adaptive_model.pkl  training_metrics.pkl
python_rl/utils/: __init__.py  export_tensorboard_graphs.py  generate_per_query_dashboard.py  logger.py  metrics.py  plot_training_metrics.py  plsa.py  plsa_backup.py  plsa_fast.py  tensorboard_callback.py  visualization.py  workload_generator.py
tcdrm_gym/: README.md  config.yml  config_qlearning_improved.yml  connect_to_java.py  pyproject.toml  train_cloudsim.py  train_qlearning_improved.py
tcdrm_gym/agents/: __init__.py  dqn_agent.py  rainbow_dqn_agent.py  simple_qlearning_agent.py
tcdrm_gym/bridge/: __init__.py  adaptive_strategy.py  client.py  rl_bridge.py
tcdrm_gym/envs/: __init__.py  cloudsim_env.py
tcdrm_gym/models/: dqn_cloudsim.pt  dqn_cloudsim_final.pt  meta_threshold_pop_complex.qtable  meta_threshold_pop_simple.qtable  meta_threshold_qlearning_delw_complex.qtable  meta_threshold_qlearning_delw_simple.qtable  meta_threshold_qlearning_pop_complex.qtable  meta_threshold_qlearning_pop_simple.qtable  meta_threshold_qlearning_tsla_complex.qtable  meta_threshold_qlearning_tsla_simple.qtable  meta_threshold_rainbow_delw_complex.qtable  meta_threshold_rainbow_delw_simple.qtable  meta_threshold_rainbow_pop_complex.qtable  meta_threshold_rainbow_pop_simple.qtable  meta_threshold_rainbow_tsla_complex.qtable  meta_threshold_rainbow_tsla_simple.qtable  meta_threshold_tsla_complex.qtable  meta_threshold_tsla_simple.qtable  qlearning_cloudsim.pkl  qlearning_cloudsim_final.pkl  rainbow_cloudsim.pt  rainbow_cloudsim_final.pt  reward_config_qlearning.properties  reward_config_rainbow.properties
tcdrm_gym/utils/: select_best.py
validation/python/: README.md  connect_to_java.py  inspect_models.py  pyproject.toml
validation/python/bridge/: client.py  rl_bridge.py
(+1057 files in other folders)
