[project]
name = "tcdrm-gym"
version = "2.0.0"
description = "Gym + RL (QL+DQN) for TCDRM-ADAPTIVE using CloudSimPlus via Py4J"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [ { name = "TCDRM Team" } ]
keywords = ["reinforcement-learning", "q-learning", "cloud-computing", "gymnasium", "resource-management", "adaptive-replication"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "gymnasium>=0.29.0",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.12.0",
  "py4j>=0.10.9.9",
  "torch>=2.0.0",
  "tqdm>=4.65.0",
  "pyyaml>=6.0",
  "tensorboard>=2.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["envs", "agents", "utils", "bridge"]
